Functional JSON routes for all data sets.

--- a/mysql_nodejs_api/public/XMLdriver.html
+++ b/mysql_nodejs_api/public/XMLdriver.html
@@ -85,10 +85,15 @@
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
                     style="background-image: url('https://www.formula1.com/content/dam/fom-website/sutton/2019/Bahrain/Sunday/1017415717-LAT-20190331-_U4I2916-16x9.jpg'); background-size: cover; border: none;">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1 card-content">
-                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold align-baseline">Drivers Data</h2>
-                        <div class="row row-cols-md-2">
 
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1 card-content">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 text fw-bold align-baseline">Drivers Data</h2>
+                        <div class="row gap-2 mx-1 pb-3">
+                            <a href='XMLdriver.html' type="button"
+                                class="btn btn-outline-light me-auto col-5 h-100 py-3">XML</a>
+                            <a href='/' type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</a>
+                        </div>
+                        <div class="row row-cols-md-2">
 
                         </div>
                     </div>
@@ -221,12 +226,6 @@
                                         return document.getElementById('currentPage').value;
                                     }
 
-                                    //   input.addEventListener('input', updateValue);
-
-                                    // function updateValue(e) {
-                                    //   log.textContent = e.target.value;
-                                    // }
-
                                     function nextPage() {
                                         let inc = getCurrentPage();
                                         const perPage = getItemsPerPage();
@@ -276,8 +275,9 @@
                                                     + dob + "</td><td>"
                                                     + nationality + "</td><td>"
                                                     + '<button type="button" id="update" name="update" class="btn btn-warning btn-sm px-4 me-sm-3 btn btn-primary" data-bs-toggle="modal" data-bs-target="#driverEditModal' + index + '" >Update</button>'
-                                                    + '<!-- Modal --> <div class="modal fade" id="driverEditModal' + index + '" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"> <div class="modal-dialog"> <div class="modal-content"> <div class="modal-header"> <h5 class="modal-title" id="exampleModalLabel">Edit ' + surname 
-                                                    + '&#39;s Info</h5> <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> </div> <div class="modal-body">' 
+                                                    + '<!-- Modal --> <div class="modal fade" id="driverEditModal' + index + '" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"> <div class="modal-dialog"> '
+                                                    + '<div class="modal-content"> <div class="modal-header"> <h5 class="modal-title" id="exampleModalLabel">Edit ' + surname
+                                                    + '&#39;s Info</h5> <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> </div> <div class="modal-body">'
                                                     + '<!-- Form -->  <form class="row" name="driverUpdateForm" id="driverUpdateForm";>'
                                                     + '<div class="col-md-6 mt-2"> <label for="validationDefault01" class="form-label">First name</label> <input type="text" class="form-control" id="validationDefault01" value="' + forename + '" required> </div>'
                                                     + '<div class="col-md-6 mt-2"> <label for="validationDefault02" class="form-label">Last name</label> <input type="text" class="form-control" id="validationDefault02" value="' + surname + '" required> </div> '
