--- a/mysql_nodejs_api/public/index.html
+++ b/mysql_nodejs_api/public/index.html
@@ -90,8 +90,8 @@
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1 card-content">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 text fw-bold align-baseline">Drivers Data</h2>
             <div class="row gap-2 mx-1 pb-3">
-              <button type="button" class="btn btn-outline-light me-auto col-5 h-100 py-3">XML</button>
-              <button type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</button>
+              <a href='XMLdriver.html' type="button" class="btn btn-outline-light me-auto col-5 h-100 py-3">XML</a>
+              <a href='/' type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</a>
             </div>
             <div class="row row-cols-md-2">
 
@@ -106,7 +106,8 @@
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-lg card-content">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold align-baseline">Tracks Data</h2>
             <div class="row gap-2 mx-1 pb-3">
-              <button type="button" class="btn btn-outline-light me-auto col-5 h-100 py-3">XML</button>
+            
+              <button type="button" class="btn btn-outline-light me-auto col-5 h-100 py-3"> XML</button>
               <button type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</button>
             </div>
             <div class="row row row-cols-md-2">
