JSON schema validation

--- a/mysql_nodejs_api/public/index copy.html
+++ b/mysql_nodejs_api/public/index copy.html
@@ -76,6 +76,8 @@
               <button type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</button>
             </div>
             <div class="row row-cols-md-2 row-cols-sm-2">
+
+
             </div>
           </div>
         </div>
@@ -83,19 +85,20 @@
       <!-- 2nd  -->
       <div class="col">
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-            style="background-image: url('https://www.formula1.com/content/dam/fom-website/sutton/2019/Bahrain/Sunday/1017415717-LAT-20190331-_U4I2916-16x9.jpg'); background-size: cover; border: none;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1 card-content">
-                <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 text fw-bold align-baseline">Drivers Data</h2>
-                <div class="row gap-2 mx-1 pb-3">
-                    <a href='XMLdriver.html' type="button"
-                        class="btn btn-outline-light me-auto col-5 h-100 py-3">XML</a>
-                    <a href='/' type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</a>
-                </div>
-                <div class="row row-cols-md-2">
-                </div>
+          style="background-image: url('https://www.formula1.com/content/dam/fom-website/sutton/2019/Bahrain/Sunday/1017415717-LAT-20190331-_U4I2916-16x9.jpg'); background-size: cover; border: none;">
+         
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1 card-content">
+            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 text fw-bold align-baseline">Drivers Data</h2>
+            <div class="row gap-2 mx-1 pb-3">
+              <a href='XMLdriver.html' type="button" class="btn btn-outline-light me-auto col-5 h-100 py-3">XML</a>
+              <a href='/' type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</a>
             </div>
+            <div class="row row-cols-md-2">
+
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
       <!-- 3rd -->
       <div class="col">
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
@@ -103,10 +106,13 @@
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-lg card-content">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold align-baseline">Tracks Data</h2>
             <div class="row gap-2 mx-1 pb-3">
+            
               <button type="button" class="btn btn-outline-light me-auto col-5 h-100 py-3"> XML</button>
               <button type="button" class="btn btn-outline-light col-5 h-100 py-3">JSON</button>
             </div>
             <div class="row row row-cols-md-2">
+
+
             </div>
           </div>
         </div>
